# BlockNotasJesus

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
core/: settings.py  urls.py
observability/: dashboard.json  prometheus.yml
tasks/: models.py  serializers.py  views.py
tasks/migrations/: 0001_initial.py
