[project]
name = "blocknotasjesus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]",
    "django-prometheus>=2.4.0",
    "python-logging-loki>=0.3.1",
]
